<resources>
    <string name="app_name">Roman Numeral Calculator</string>
    <string name="equals">=</string>
    <string name="settings">Settings</string>
    <string name="ac">AC</string>
    <string name="x">×</string>
    <string name="subtract">−</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="i">I</string>
    <string name="_0">0</string>
    <string name="m">M</string>
    <string name="equal">=</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="divide">/</string>
    <string name="power">^</string>
    <string name="l">L</string>
    <string name="v">V</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="times">X</string>
</resources>
