<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/secondaryDisplay"
                    style="@style/CustomTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:textSize="40sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/mainDisplay"
                style="@style/CustomTextView"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@color/black"
                android:text="@string/_0"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button7"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:autoText="false"
                android:lineSpacingExtra="8sp"
                android:text="@string/_7"
                android:typeface="normal" />

            <Button
                android:id="@+id/button8"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:text="@string/_8" />

            <Button
                android:id="@+id/button9"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:text="@string/_9" />

            <Button
                android:id="@+id/clearButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"
                android:text="@string/ac"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                tools:targetApi="lollipop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:text="@string/_4" />

            <Button
                android:id="@+id/button5"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:text="@string/_5" />

            <Button
                android:id="@+id/button6"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:text="@string/_6" />

            <Button
                android:id="@+id/plusButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1" />

            <Button
                android:id="@+id/button2"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2" />

            <Button
                android:id="@+id/button3"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3" />

            <Button
                android:id="@+id/minusButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonL"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/l" />

            <Button
                android:id="@+id/buttonC"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/c" />

            <Button
                android:id="@+id/buttonD"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/d" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:backgroundTint="@color/orange"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonI"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/i" />

            <Button
                android:id="@+id/buttonV"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/v" />

            <Button
                android:id="@+id/buttonX"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/times" />

            <Button
                android:id="@+id/divideButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button0"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/buttonM"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/m" />

            <Button
                android:id="@+id/powerButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/power"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equalsButton"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/orange"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</TableLayout>
